<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityRegister">

    <EditText
        android:id="@+id/namePlace"
        android:layout_width="334dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:hint="@string/enter_name_register"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/passwordPlace"
        android:layout_width="334dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_password_register"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namePlace"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/cityPlace"
        android:layout_width="334dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_city"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordPlace" />

    <TextView
        android:id="@+id/dobText"
        android:layout_width="334dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:hint="@string/enter_date_of_birthday"
        android:importantForAutofill="no"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityPlace"
        tools:ignore="TextContrastCheck" />

    <DatePicker
        android:id="@+id/datePickerRegister"
        android:layout_width="328dp"
        android:layout_height="116dp"
        android:layout_marginTop="16dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dobText" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="334dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePickerRegister" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="334dp"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

</androidx.constraintlayout.widget.ConstraintLayout>